# cookbook

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent_api_example.ipynb  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
accommodation/: accommodation.ipynb
api/multion-ts/: package-lock.json  test.js
api/multion-ts/src/: index.ts  secrets.ts
coding-agent/: README.md  agent.py  app.py  prompts.py
coding_agent/: README.md  pyproject.toml
competitor-research/: README.md  agent.py  main.py  prompts.py  pyproject.toml
examples/: Multion_Remote_api_example.ipynb  Multion_api_example.ipynb  README.md  advanced_langchain_custom_tools.ipynb  agent_api_example.ipynb  agent_example.py  agent_example.ts  langchain_agent.ipynb  langchain_example.ipynb  oauth_example.ipynb  opentable_example.ipynb  requirements.txt  scheduler_application.py  test.js
examples/evaluation/: ARXIVtoNOTION.py  dataset.json  generated_dataset.json  gmailautomation.py  langchain.ipynb
examples/gpu_agent/: agent_example.py  human_input.py
examples/restaurant-bot/: .gitignore  README.md  agents.py  app.py  docker-compose.yml
examples/restaurant-bot/backend/: ReservationAgent.ipynb  agents.py  app.py  prompts.py  tools.py
examples/restaurant-bot/old/: Dockerfile
examples/restaurant-bot/old/backend/: ReservationAgent.ipynb  app.py  requirements.txt
examples/restaurant_bot/: .local.env  requirements.txt
examples/task_scheduler/: README.md  requirements.txt  run.py  scheduler_application.py
form-filling/: README.md  form.py
integrations/: README.md
integrations/langchain-py-integration-files/: test.ipynb
internet-of-agents/: README.md  manager.py  pyproject.toml  social_manager.py  type.py  viz.py  worker.py
job-search/: README.md  agent.py  main.py  prompts.py  pyproject.toml
langchain-integration-files/: copy_files.py  example.md  test.ipynb  test.py  test2.ipynb
langchain-integration-files/agents/agent_toolkits/: __init__.py
langchain-integration-files/tools/multion/: __init__.py  base.py  create_session.py  tool.py  update_session.py
langchain-integration-files/utilities/: multion.py
langchain-integration/tools/multion/: __init__.py
langchain-integration/utilities/: multion.py
multion/: __init__.py  multion.py
multion-js/: main.js  package-lock.json  package.json  test.js
news-digest/: news_digest.ipynb
personalized-travel-agent/: mem0_travel_agent.ipynb
recursive-scraping/: recursive_scraping.ipynb
restaurant-booking/: restaurant_booking.ipynb
scraping/: scrape-comments.ipynb  scrape_linkedin.ipynb
sdks/: openapi.yaml  package-lock.json  package.json
sdks/multion-js/: .babelrc  README.md  browse.js  main.js  multion.js  package-lock.json  package.json  test.js
sdks/multion-js/src/: browse.js  index.js  main.js  multion.js
sdks/multion-py/: Multion_Remote_api_example.ipynb  Multion_api_example.ipynb  README.md  __init__.py  browse.py  multion.py  pyproject.toml
sdks/multion-py-old/: pyproject.toml
sdks/multion-py-old/multion/: agentops_client.py  multion.py  setup.py
sdks/multion-py-old/tests/: test_login.py  test_session.py
sdks/multion-py/multion/: __init__.py  agentops_client.py  browse.py  browser.py  multion.py  setup.py
sdks/multion-py/tests/: test_session.py
sdks/multion-ts/: Client.d.ts  Client.js  README.md  index.d.ts  index.js  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json
sdks/multion-ts/api/types/: index.d.ts  (+16 more)
sdks/multion-ts/errors/: MultionApiError.d.ts  MultionApiError.js  MultionApiTimeoutError.d.ts  MultionApiTimeoutError.js  index.d.ts  index.js
sdks/multion-ts/src/: json.d.ts
sdks/multion_py/: README.md  __init__.py  client.py
sdks/multion_py/core/: client_wrapper.py
sdks/multion_py/resources/: __init__.py
sdks/multion_py/types/: __init__.py  access_params.py  browse_output.py  message.py  message_browser_params.py  remote_value.py  retrieve_output.py  retrieve_output_response.py  session_created.py  session_created_response.py  session_created_response_data.py  session_step_success.py  session_step_success_response.py  session_step_success_response_data.py
(+77 files in other folders)
