[tool.poetry]
name = "multion"
version = "0.1.17"
description = "MULTION API"
authors = ["Div Garg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
requests-oauthlib = "^1.3.1"
requests = "^2.31.0"
langchain = "^0.0.212"
openai = "^0.27.8"
cryptography = "^41.0.1"
image = "^1.5.33"
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
