[tool.poetry]
name = "coding-agent"
version = "0.0.0"
description = "Coding Agent"
authors = ["Multion"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
multion = "^1.3.3"
instructor = "*"
openai = "*"
pydantic = "*"
python-dotenv = "^1.0.1"
gradio = "^4.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
