[tool.poetry]
name = "competitor-research"
version = "0.0.0"
description = "Competitor Research"
authors = ["Multion"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
multion = "^1.3.3"
instructor = "*"
openai = "*"
pydantic = "*"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
