[tool.poetry]
name = "job-search"
version = "0.0.0"
description = "Job Search"
authors = ["Multion"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
multion = "^1.3.3"
instructor = "*"
openai = "*"
pydantic = "*"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
