[tool.poetry]
name = "multion"
version = "0.2.5"
description = "MULTION API"
authors = ["Div Garg"]
include = ["secrets.json"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests-oauthlib = "^1.3.1"
requests = "^2.31.0"
openai = "^0.27.8"
cryptography = "^41.0.1"
ipython = "^8.14.0"
cognitojwt = "^1.4.1"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
